Working Bounding Box Travel App :D

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="learning_apps">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- TODO: Add your Google Maps API key here -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWRzY1S7B-NwexHR3C5onkZSyeQYG_IVo"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
